tests/error/invalid_return.gw
// [contains] invalid return type
function void test() { return 1; }
